src/woglac/parser/WoglacParser.cpp

// Generated from Woglac.g4 by ANTLR 4.7.2


#include "WoglacListener.h"

#include "WoglacParser.h"


using namespace antlrcpp;
using namespace antlr4;

WoglacParser::WoglacParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

WoglacParser::~WoglacParser() {
  delete _interpreter;
}

std::string WoglacParser::getGrammarFileName() const {
  return "Woglac.g4";
}

const std::vector<std::string>& WoglacParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& WoglacParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ModuleContext ------------------------------------------------------------------

WoglacParser::ModuleContext::ModuleContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WoglacParser::ModuleContext::EOF() {
  return getToken(WoglacParser::EOF, 0);
}

std::vector<WoglacParser::StatementContext *> WoglacParser::ModuleContext::statement() {
  return getRuleContexts<WoglacParser::StatementContext>();
}

WoglacParser::StatementContext* WoglacParser::ModuleContext::statement(size_t i) {
  return getRuleContext<WoglacParser::StatementContext>(i);
}


size_t WoglacParser::ModuleContext::getRuleIndex() const {
  return WoglacParser::RuleModule;
}

void WoglacParser::ModuleContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterModule(this);
}

void WoglacParser::ModuleContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitModule(this);
}

WoglacParser::ModuleContext* WoglacParser::module() {
  ModuleContext *_localctx = _tracker.createInstance<ModuleContext>(_ctx, getState());
  enterRule(_localctx, 0, WoglacParser::RuleModule);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << WoglacParser::T__0)
      | (1ULL << WoglacParser::T__1)
      | (1ULL << WoglacParser::T__2)
      | (1ULL << WoglacParser::T__3)
      | (1ULL << WoglacParser::T__4)
      | (1ULL << WoglacParser::T__5)
      | (1ULL << WoglacParser::T__8)
      | (1ULL << WoglacParser::T__10)
      | (1ULL << WoglacParser::T__11)
      | (1ULL << WoglacParser::T__13)
      | (1ULL << WoglacParser::T__20)
      | (1ULL << WoglacParser::T__26)
      | (1ULL << WoglacParser::T__29)
      | (1ULL << WoglacParser::Type))) != 0)) {
      setState(80);
      dynamic_cast<ModuleContext *>(_localctx)->statementContext = statement();
      dynamic_cast<ModuleContext *>(_localctx)->content.push_back(dynamic_cast<ModuleContext *>(_localctx)->statementContext);
      setState(85);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(86);
    match(WoglacParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

WoglacParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WoglacParser::PragmaStatementContext* WoglacParser::StatementContext::pragmaStatement() {
  return getRuleContext<WoglacParser::PragmaStatementContext>(0);
}

WoglacParser::ParamDefinitionContext* WoglacParser::StatementContext::paramDefinition() {
  return getRuleContext<WoglacParser::ParamDefinitionContext>(0);
}

WoglacParser::BiomeParamDefinitionContext* WoglacParser::StatementContext::biomeParamDefinition() {
  return getRuleContext<WoglacParser::BiomeParamDefinitionContext>(0);
}

WoglacParser::ParamSetStatementContext* WoglacParser::StatementContext::paramSetStatement() {
  return getRuleContext<WoglacParser::ParamSetStatementContext>(0);
}

WoglacParser::BiomeConditionStatementContext* WoglacParser::StatementContext::biomeConditionStatement() {
  return getRuleContext<WoglacParser::BiomeConditionStatementContext>(0);
}

WoglacParser::VariableDefinitionContext* WoglacParser::StatementContext::variableDefinition() {
  return getRuleContext<WoglacParser::VariableDefinitionContext>(0);
}

WoglacParser::RuleExpansionStatementContext* WoglacParser::StatementContext::ruleExpansionStatement() {
  return getRuleContext<WoglacParser::RuleExpansionStatementContext>(0);
}

WoglacParser::ScopeContext* WoglacParser::StatementContext::scope() {
  return getRuleContext<WoglacParser::ScopeContext>(0);
}

WoglacParser::ComponentNodeStatementContext* WoglacParser::StatementContext::componentNodeStatement() {
  return getRuleContext<WoglacParser::ComponentNodeStatementContext>(0);
}

WoglacParser::ComponentBlockStatementContext* WoglacParser::StatementContext::componentBlockStatement() {
  return getRuleContext<WoglacParser::ComponentBlockStatementContext>(0);
}

WoglacParser::ComponentAreaStatementContext* WoglacParser::StatementContext::componentAreaStatement() {
  return getRuleContext<WoglacParser::ComponentAreaStatementContext>(0);
}

WoglacParser::StructureConditionStatementContext* WoglacParser::StatementContext::structureConditionStatement() {
  return getRuleContext<WoglacParser::StructureConditionStatementContext>(0);
}

WoglacParser::ComponentIncludeStatementContext* WoglacParser::StatementContext::componentIncludeStatement() {
  return getRuleContext<WoglacParser::ComponentIncludeStatementContext>(0);
}


size_t WoglacParser::StatementContext::getRuleIndex() const {
  return WoglacParser::RuleStatement;
}

void WoglacParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void WoglacParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

WoglacParser::StatementContext* WoglacParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, WoglacParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(88);
      pragmaStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(89);
      paramDefinition();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(90);
      biomeParamDefinition();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(91);
      paramSetStatement();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(92);
      biomeConditionStatement();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(93);
      variableDefinition();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(94);
      ruleExpansionStatement();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(95);
      scope();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(96);
      componentNodeStatement();
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(97);
      componentBlockStatement();
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(98);
      componentAreaStatement();
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(99);
      structureConditionStatement();
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(100);
      componentIncludeStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ScopeContext ------------------------------------------------------------------

WoglacParser::ScopeContext::ScopeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WoglacParser::ContentOrSemicolonContext* WoglacParser::ScopeContext::contentOrSemicolon() {
  return getRuleContext<WoglacParser::ContentOrSemicolonContext>(0);
}

WoglacParser::ExtendedIdentifierContext* WoglacParser::ScopeContext::extendedIdentifier() {
  return getRuleContext<WoglacParser::ExtendedIdentifierContext>(0);
}

std::vector<WoglacParser::StatementContext *> WoglacParser::ScopeContext::statement() {
  return getRuleContexts<WoglacParser::StatementContext>();
}

WoglacParser::StatementContext* WoglacParser::ScopeContext::statement(size_t i) {
  return getRuleContext<WoglacParser::StatementContext>(i);
}


size_t WoglacParser::ScopeContext::getRuleIndex() const {
  return WoglacParser::RuleScope;
}

void WoglacParser::ScopeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterScope(this);
}

void WoglacParser::ScopeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitScope(this);
}

WoglacParser::ScopeContext* WoglacParser::scope() {
  ScopeContext *_localctx = _tracker.createInstance<ScopeContext>(_ctx, getState());
  enterRule(_localctx, 4, WoglacParser::RuleScope);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(118);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WoglacParser::T__0:
      case WoglacParser::T__1:
      case WoglacParser::T__2:
      case WoglacParser::T__3:
      case WoglacParser::T__4: {
        enterOuterAlt(_localctx, 1);
        setState(104);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == WoglacParser::T__0) {
          setState(103);
          dynamic_cast<ScopeContext *>(_localctx)->extend = match(WoglacParser::T__0);
        }
        setState(106);
        dynamic_cast<ScopeContext *>(_localctx)->type = _input->LT(1);
        _la = _input->LA(1);
        if (!((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << WoglacParser::T__1)
          | (1ULL << WoglacParser::T__2)
          | (1ULL << WoglacParser::T__3)
          | (1ULL << WoglacParser::T__4))) != 0))) {
          dynamic_cast<ScopeContext *>(_localctx)->type = _errHandler->recoverInline(this);
        }
        else {
          _errHandler->reportMatch(this);
          consume();
        }
        setState(107);
        dynamic_cast<ScopeContext *>(_localctx)->id = extendedIdentifier();
        setState(108);
        contentOrSemicolon();
        break;
      }

      case WoglacParser::T__5: {
        enterOuterAlt(_localctx, 2);
        setState(110);
        match(WoglacParser::T__5);
        setState(114);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << WoglacParser::T__0)
          | (1ULL << WoglacParser::T__1)
          | (1ULL << WoglacParser::T__2)
          | (1ULL << WoglacParser::T__3)
          | (1ULL << WoglacParser::T__4)
          | (1ULL << WoglacParser::T__5)
          | (1ULL << WoglacParser::T__8)
          | (1ULL << WoglacParser::T__10)
          | (1ULL << WoglacParser::T__11)
          | (1ULL << WoglacParser::T__13)
          | (1ULL << WoglacParser::T__20)
          | (1ULL << WoglacParser::T__26)
          | (1ULL << WoglacParser::T__29)
          | (1ULL << WoglacParser::Type))) != 0)) {
          setState(111);
          dynamic_cast<ScopeContext *>(_localctx)->statementContext = statement();
          dynamic_cast<ScopeContext *>(_localctx)->content.push_back(dynamic_cast<ScopeContext *>(_localctx)->statementContext);
          setState(116);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(117);
        match(WoglacParser::T__6);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContentOrSemicolonContext ------------------------------------------------------------------

WoglacParser::ContentOrSemicolonContext::ContentOrSemicolonContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<WoglacParser::StatementContext *> WoglacParser::ContentOrSemicolonContext::statement() {
  return getRuleContexts<WoglacParser::StatementContext>();
}

WoglacParser::StatementContext* WoglacParser::ContentOrSemicolonContext::statement(size_t i) {
  return getRuleContext<WoglacParser::StatementContext>(i);
}


size_t WoglacParser::ContentOrSemicolonContext::getRuleIndex() const {
  return WoglacParser::RuleContentOrSemicolon;
}

void WoglacParser::ContentOrSemicolonContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterContentOrSemicolon(this);
}

void WoglacParser::ContentOrSemicolonContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitContentOrSemicolon(this);
}

WoglacParser::ContentOrSemicolonContext* WoglacParser::contentOrSemicolon() {
  ContentOrSemicolonContext *_localctx = _tracker.createInstance<ContentOrSemicolonContext>(_ctx, getState());
  enterRule(_localctx, 6, WoglacParser::RuleContentOrSemicolon);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(129);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case WoglacParser::T__5: {
        enterOuterAlt(_localctx, 1);
        setState(120);
        match(WoglacParser::T__5);
        setState(124);
        _errHandler->sync(this);
        _la = _input->LA(1);
        while ((((_la & ~ 0x3fULL) == 0) &&
          ((1ULL << _la) & ((1ULL << WoglacParser::T__0)
          | (1ULL << WoglacParser::T__1)
          | (1ULL << WoglacParser::T__2)
          | (1ULL << WoglacParser::T__3)
          | (1ULL << WoglacParser::T__4)
          | (1ULL << WoglacParser::T__5)
          | (1ULL << WoglacParser::T__8)
          | (1ULL << WoglacParser::T__10)
          | (1ULL << WoglacParser::T__11)
          | (1ULL << WoglacParser::T__13)
          | (1ULL << WoglacParser::T__20)
          | (1ULL << WoglacParser::T__26)
          | (1ULL << WoglacParser::T__29)
          | (1ULL << WoglacParser::Type))) != 0)) {
          setState(121);
          dynamic_cast<ContentOrSemicolonContext *>(_localctx)->statementContext = statement();
          dynamic_cast<ContentOrSemicolonContext *>(_localctx)->content.push_back(dynamic_cast<ContentOrSemicolonContext *>(_localctx)->statementContext);
          setState(126);
          _errHandler->sync(this);
          _la = _input->LA(1);
        }
        setState(127);
        match(WoglacParser::T__6);
        break;
      }

      case WoglacParser::T__7: {
        enterOuterAlt(_localctx, 2);
        setState(128);
        match(WoglacParser::T__7);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PragmaStatementContext ------------------------------------------------------------------

WoglacParser::PragmaStatementContext::PragmaStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

WoglacParser::ExtendedIdentifierContext* WoglacParser::PragmaStatementContext::extendedIdentifier() {
  return getRuleContext<WoglacParser::ExtendedIdentifierContext>(0);
}

WoglacParser::LiteralExpressionContext* WoglacParser::PragmaStatementContext::literalExpression() {
  return getRuleContext<WoglacParser::LiteralExpressionContext>(0);
}

tree::TerminalNode* WoglacParser::PragmaStatementContext::Identifier() {
  return getToken(WoglacParser::Identifier, 0);
}


size_t WoglacParser::PragmaStatementContext::getRuleIndex() const {
  return WoglacParser::RulePragmaStatement;
}

void WoglacParser::PragmaStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPragmaStatement(this);
}

void WoglacParser::PragmaStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPragmaStatement(this);
}

WoglacParser::PragmaStatementContext* WoglacParser::pragmaStatement() {
  PragmaStatementContext *_localctx = _tracker.createInstance<PragmaStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, WoglacParser::RulePragmaStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    match(WoglacParser::T__8);
    setState(132);
    dynamic_cast<PragmaStatementContext *>(_localctx)->id = extendedIdentifier();
    setState(138);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WoglacParser::T__9) {
      setState(133);
      match(WoglacParser::T__9);
      setState(136);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case WoglacParser::T__27:
        case WoglacParser::T__35:
        case WoglacParser::BlockLiteral:
        case WoglacParser::BoolLiteral:
        case WoglacParser::StringLiteral:
        case WoglacParser::NumericLiteral: {
          setState(134);
          dynamic_cast<PragmaStatementContext *>(_localctx)->valLit = literalExpression();
          break;
        }

        case WoglacParser::Identifier: {
          setState(135);
          dynamic_cast<PragmaStatementContext *>(_localctx)->valId = match(WoglacParser::Identifier);
          break;
        }

      default:
        throw NoViableAltException(this);
      }
    }
    setState(140);
    match(WoglacParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDefinitionContext ------------------------------------------------------------------

WoglacParser::VariableDefinitionContext::VariableDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WoglacParser::VariableDefinitionContext::Type() {
  return getToken(WoglacParser::Type, 0);
}

WoglacParser::ExtendedIdentifierContext* WoglacParser::VariableDefinitionContext::extendedIdentifier() {
  return getRuleContext<WoglacParser::ExtendedIdentifierContext>(0);
}

WoglacParser::ExpressionContext* WoglacParser::VariableDefinitionContext::expression() {
  return getRuleContext<WoglacParser::ExpressionContext>(0);
}


size_t WoglacParser::VariableDefinitionContext::getRuleIndex() const {
  return WoglacParser::RuleVariableDefinition;
}

void WoglacParser::VariableDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVariableDefinition(this);
}

void WoglacParser::VariableDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVariableDefinition(this);
}

WoglacParser::VariableDefinitionContext* WoglacParser::variableDefinition() {
  VariableDefinitionContext *_localctx = _tracker.createInstance<VariableDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 10, WoglacParser::RuleVariableDefinition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WoglacParser::T__10) {
      setState(142);
      dynamic_cast<VariableDefinitionContext *>(_localctx)->exportFlag = match(WoglacParser::T__10);
    }
    setState(145);
    dynamic_cast<VariableDefinitionContext *>(_localctx)->type = match(WoglacParser::Type);
    setState(146);
    dynamic_cast<VariableDefinitionContext *>(_localctx)->id = extendedIdentifier();
    setState(147);
    match(WoglacParser::T__9);
    setState(148);
    dynamic_cast<VariableDefinitionContext *>(_localctx)->val = expression();
    setState(149);
    match(WoglacParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamDefinitionContext ------------------------------------------------------------------

WoglacParser::ParamDefinitionContext::ParamDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WoglacParser::ParamDefinitionContext::Type() {
  return getToken(WoglacParser::Type, 0);
}

tree::TerminalNode* WoglacParser::ParamDefinitionContext::Identifier() {
  return getToken(WoglacParser::Identifier, 0);
}

WoglacParser::ExpressionContext* WoglacParser::ParamDefinitionContext::expression() {
  return getRuleContext<WoglacParser::ExpressionContext>(0);
}

WoglacParser::ExtendedIdentifierContext* WoglacParser::ParamDefinitionContext::extendedIdentifier() {
  return getRuleContext<WoglacParser::ExtendedIdentifierContext>(0);
}


size_t WoglacParser::ParamDefinitionContext::getRuleIndex() const {
  return WoglacParser::RuleParamDefinition;
}

void WoglacParser::ParamDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamDefinition(this);
}

void WoglacParser::ParamDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamDefinition(this);
}

WoglacParser::ParamDefinitionContext* WoglacParser::paramDefinition() {
  ParamDefinitionContext *_localctx = _tracker.createInstance<ParamDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 12, WoglacParser::RuleParamDefinition);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(155);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WoglacParser::T__2

    || _la == WoglacParser::T__3) {
      setState(151);
      dynamic_cast<ParamDefinitionContext *>(_localctx)->targetType = _input->LT(1);
      _la = _input->LA(1);
      if (!(_la == WoglacParser::T__2

      || _la == WoglacParser::T__3)) {
        dynamic_cast<ParamDefinitionContext *>(_localctx)->targetType = _errHandler->recoverInline(this);
      }
      else {
        _errHandler->reportMatch(this);
        consume();
      }
      setState(153);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == WoglacParser::Identifier) {
        setState(152);
        dynamic_cast<ParamDefinitionContext *>(_localctx)->target = extendedIdentifier();
      }
    }
    setState(157);
    match(WoglacParser::T__11);
    setState(158);
    dynamic_cast<ParamDefinitionContext *>(_localctx)->type = match(WoglacParser::Type);
    setState(159);
    dynamic_cast<ParamDefinitionContext *>(_localctx)->id = match(WoglacParser::Identifier);
    setState(162);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == WoglacParser::T__12) {
      setState(160);
      match(WoglacParser::T__12);
      setState(161);
      dynamic_cast<ParamDefinitionContext *>(_localctx)->defaultValue = expression();
    }
    setState(164);
    match(WoglacParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BiomeParamDefinitionContext ------------------------------------------------------------------

WoglacParser::BiomeParamDefinitionContext::BiomeParamDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* WoglacParser::BiomeParamDefinitionContext::Type() {
  return getToken(WoglacParser::Type, 0);
}

WoglacParser::ExtendedIdentifierContext* WoglacParser::BiomeParamDefinitionContext::extendedIdentifier() {
  return getRuleContext<WoglacParser::ExtendedIdentifierContext>(0);
}

WoglacParser::ExpressionContext* WoglacParser::BiomeParamDefinitionContext::expression() {
  return getRuleContext<WoglacParser::ExpressionContext>(0);
}


size_t WoglacParser::BiomeParamDefinitionContext::getRuleIndex() const {
  return WoglacParser::RuleBiomeParamDefinition;
}

void WoglacParser::BiomeParamDefinitionContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBiomeParamDefinition(this);
}

void WoglacParser::BiomeParamDefinitionContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<WoglacListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBiomeParamDefinition(this);
}

WoglacParser::BiomeParamDefinitionContext* WoglacParser::biomeParamDefinition() {
  BiomeParamDefinitionContext *_localctx = _tracker.createInstance<BiomeParamDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 14, WoglacParser::RuleBiomeParamDefinition);
